# claude-crossplay

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/scripts/: validate_skills.rb
.github/workflows/: notify-private-tests.yml  release-skill.yml
core/: SKILL.md
core/references/: diagnostics.md  dictionary.md  game-rules.md
core/scripts/: gaddag.py  grid_overlay.py  moves_template.py  nwl23_ref.py  setup_dict.py  solver.py  wordtrie.py
src/: SKILL.md
src/scripts/: fetch_core.py  grid_overlay.py
